syntax = "proto3";

package metric;

option go_package = "metric";

message Gauge {
    string key = 1;
    fixed64 value = 2;
}

message Counter {
    string ket = 1;
    int64 value = 2;
}

message UpdateMetricBulkRequest {
    repeated Gauge gauge = 1;
    repeated Counter counter = 2;
}

message UpdateMetricBulkResponse {
    string error = 1;
}

service Metric {
    rpc UpdateMetricBulk(UpdateMetricBulkRequest) returns (UpdateMetricBulkResponse);
}